<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/event_edit_title"
        android:textColor="#185ad1"
        android:textSize="25sp"/>
        -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.18"
            android:orientation="vertical">
            <TextView
                android:id="@+id/event_name_editTV"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:text="@string/event_name_editTV"
                android:textColor="#f5000000"/>
            <TextView
                android:id="@+id/event_type_editTV"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="17sp"
                android:layout_height="50dp"
                android:text="@string/event_type_editTV"
                android:textColor="#f5000000"/>

            <TextView
                android:id="@+id/event_time_editTV"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="17sp"
                android:layout_height="50dp"
                android:text="@string/event_time_editTV"
                android:textColor="#f5000000"
                android:focusable="false"/>




        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.82"
            android:orientation="vertical">


            <EditText
                android:id="@+id/event_name_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="20"
                android:hint="@string/event_name_editTV"
                android:textColor="#f5000000" />
            <EditText
                android:id="@+id/event_type_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="20"
                android:hint="@string/event_type_edit"
                android:focusable="false"
                android:textColor="#f5000000"/>

            <EditText
                android:id="@+id/event_time_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="20"
                android:hint="@string/event_time_edit"
                android:focusable="false"
                android:textColor="#f5000000"/>



        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/event_edit_ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/ok"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:background="@drawable/action_sign_in"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>


</LinearLayout>