<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hk.edu.cuhk.ie.iems5722.group4_our_days.MainActivity"
    tools:showIn="@layout/activity_main"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/user1_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="left"
            android:gravity="left"
            android:layout_weight="0.5">
            <ImageView
                android:layout_width="45dip"
                android:layout_height="45dip"
                android:background="@drawable/user_icon_11"
                android:contentDescription="@string/accept"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical|top"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:id="@+id/user1_icon" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|top"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_toRightOf="@+id/imageView2">
                <TextView
                    android:id="@+id/main_user_name1"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_height="25dp"
                    android:textSize="17sp"
                    android:text="@string/username1"
                    android:textColor="#232323"
                    android:gravity="left" />
                <TextView
                    android:id="@+id/user1_location"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textSize="14sp"
                    android:textColor="#8D8C8C"
                    android:drawablePadding="2dip"
                    android:drawableLeft="@drawable/location_icon"
                    android:text="@string/userlocation"
                    android:gravity="left"/>
                <TextView
                    android:id="@+id/user1_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textSize="14sp"
                    android:drawablePadding="2dip"
                    android:textColor="#8D8C8C"
                    android:drawableLeft="@drawable/weather_icon1"
                    android:text="@string/userweather"
                    android:gravity="left"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/user2_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_weight="0.5">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_gravity="center_vertical|top">
                <TextView
                    android:id="@+id/main_user_name2"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_height="25dp"
                    android:textSize="17sp"
                    android:text="@string/username2"
                    android:textColor="#232323"
                    android:layout_gravity="end"
                    android:gravity="right" />
                <TextView
                    android:id="@+id/user2_location"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:drawableRight="@drawable/location_icon"
                    android:text="@string/userlocation"
                    android:drawablePadding="2dip"
                    android:textSize="14sp"
                    android:textColor="#8D8C8C"
                    android:layout_gravity="end"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/user2_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textSize="14sp"
                    android:drawablePadding="2dip"
                    android:textColor="#8D8C8C"
                    android:drawableRight="@drawable/weather_icon1"
                    android:text="@string/userweather"
                    android:layout_gravity="end"
                    android:gravity="right"/>
            </LinearLayout>
                <ImageView
                    android:layout_width="45dip"
                    android:layout_height="45dip"
                    android:background="@drawable/user_icon_22"
                    android:layout_gravity="center_vertical|top"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/accept"
                    android:id="@+id/user2_icon"
                    android:layout_marginRight="12dp"
                    android:layout_marginEnd="12dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:background="@layout/shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calandertext"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="18dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/calender_title"
                android:textColor="#5fc0a7"
                android:textSize="15sp"
                android:gravity="start" />
            <TextView
                android:id="@+id/calandersubtext"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="18dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="8dp"
                android:text="@string/calender_date"
                android:textColor="#c7c7c7"
                android:textSize="13sp"
                android:gravity="end" />
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/listView_calendar"
            android:divider="#FFFFFF"
            android:dividerHeight="5dp"/>
        <Button
            android:id="@+id/main_add_button"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="@string/add_event"
            android:drawableLeft="@drawable/add"
            android:paddingLeft="12dp"
            android:gravity="center"
            android:drawablePadding="2dip"
            android:textColor="#a4a4a4"
            android:textSize="12sp"
            android:background="@drawable/add_event_shape"/>

    </LinearLayout>
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="48dp"
        android:layout_height="84dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:backgroundTint="#ffffff"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="right"
        fab:menu_colorNormal="#64D19A"
        fab:menu_colorPressed="#64D19A">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:src="@drawable/chat"
            fab:backgroundTint="#FFFFFF"
            fab:fab_size="mini"
            fab:fab_label="Menu item 1" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:src="@drawable/phone"
            fab:backgroundTint="#FFFFFF"
            fab:fab_size="mini"
            fab:fab_label="Menu item 2" />


    </com.github.clans.fab.FloatingActionMenu>
</LinearLayout>
